# clue_test

./: CMakeLists.txt
include/: foo.h
src/: foo.cpp  main.cpp
